# qlocky

./: .gitignore  CMakeLists.txt  README.md
forms/: mainwindow.ui
include/: clock.hpp  mainwindow.hpp
src/: clock.cpp  main.cpp  mainwindow.cpp
